Some fixes after getting our latest raw data flowed in

--- a/_notebooks/duplicates.ipynb
+++ b/_notebooks/duplicates.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "bf0d5141-7737-4189-834c-6a2ab5a57ce4",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "bf22d02f-8d00-4d23-9f70-39334c79e628",
    "metadata": {},
    "outputs": [
@@ -41,18 +41,16 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 38909 entries, 0 to 38908\n",
-      "Data columns (total 6 columns):\n",
-      " #   Column       Non-Null Count  Dtype  \n",
-      "---  ------       --------------  -----  \n",
-      " 0   hash_id      38909 non-null  object \n",
-      " 1   location     34697 non-null  object \n",
-      " 2   jobs         26420 non-null  float64\n",
-      " 3   company      38908 non-null  object \n",
-      " 4   postal_code  38909 non-null  object \n",
-      " 5   date         36414 non-null  object \n",
-      "dtypes: float64(1), object(5)\n",
-      "memory usage: 1.8+ MB\n"
+      "RangeIndex: 311 entries, 0 to 310\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column       Non-Null Count  Dtype \n",
+      "---  ------       --------------  ----- \n",
+      " 0   postal_code  311 non-null    object\n",
+      " 1   company      311 non-null    object\n",
+      " 2   date         305 non-null    object\n",
+      " 3   jobs         311 non-null    int64 \n",
+      "dtypes: int64(1), object(3)\n",
+      "memory usage: 9.8+ KB\n"
      ]
     }
    ],
@@ -62,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "1c62bf91-5327-4ad4-82a7-1cf9dda51b70",
    "metadata": {},
    "outputs": [
@@ -87,88 +85,62 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>hash_id</th>\n",
-       "      <th>location</th>\n",
-       "      <th>jobs</th>\n",
-       "      <th>company</th>\n",
        "      <th>postal_code</th>\n",
+       "      <th>company</th>\n",
        "      <th>date</th>\n",
+       "      <th>jobs</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>b855422a87ece9da20ec6571e2f8f6f48521d4e06610e5...</td>\n",
-       "      <td>Anchorage</td>\n",
-       "      <td>40.0</td>\n",
-       "      <td>Bean’s Cafe</td>\n",
-       "      <td>AK</td>\n",
-       "      <td>2021-09-16</td>\n",
+       "      <td>IA</td>\n",
+       "      <td>International Automotive Components, IAC</td>\n",
+       "      <td>2016-10-21</td>\n",
+       "      <td>460</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2214cbc57e63037a436152aeb018819a5e8777e2e8eab1...</td>\n",
-       "      <td>Prudhoe Bay</td>\n",
-       "      <td>134.0</td>\n",
-       "      <td>Kakivik Asset Mgmt</td>\n",
-       "      <td>AK</td>\n",
-       "      <td>2021-07-02</td>\n",
+       "      <td>IA</td>\n",
+       "      <td>Premier Brick &amp; Stone, Inc.</td>\n",
+       "      <td>2016-10-31</td>\n",
+       "      <td>25</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>20c76d62449eb697b6f95288b8982e36586afd99fc7b7c...</td>\n",
-       "      <td>Fairbanks, North Pole</td>\n",
-       "      <td>185.0</td>\n",
-       "      <td>First Student</td>\n",
-       "      <td>AK</td>\n",
-       "      <td>2021-04-30</td>\n",
+       "      <td>IA</td>\n",
+       "      <td>ShopKo</td>\n",
+       "      <td>2016-11-01</td>\n",
+       "      <td>24</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0ca0a89d9a684741de7f5199ef69ffc948b5df7e93e22c...</td>\n",
-       "      <td>Anchorage</td>\n",
-       "      <td>59.0</td>\n",
-       "      <td>GCI Communication Group</td>\n",
-       "      <td>AK</td>\n",
-       "      <td>2021-04-12</td>\n",
+       "      <td>IA</td>\n",
+       "      <td>Eaton Corporation</td>\n",
+       "      <td>2016-11-18</td>\n",
+       "      <td>144</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>b7c5bb7e614fcce37f1f8c7ba00786faa5482270039b5c...</td>\n",
-       "      <td>Anchorage and 20 smaller Alaska communities, p...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>RavnAir Group, Corvus Airlines, Hageland Aviat...</td>\n",
-       "      <td>AK</td>\n",
-       "      <td>2020-09-30</td>\n",
+       "      <td>IA</td>\n",
+       "      <td>Transamerica Life Ins.</td>\n",
+       "      <td>2016-12-02</td>\n",
+       "      <td>44</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                             hash_id  \\\n",
-       "0  b855422a87ece9da20ec6571e2f8f6f48521d4e06610e5...   \n",
-       "1  2214cbc57e63037a436152aeb018819a5e8777e2e8eab1...   \n",
-       "2  20c76d62449eb697b6f95288b8982e36586afd99fc7b7c...   \n",
-       "3  0ca0a89d9a684741de7f5199ef69ffc948b5df7e93e22c...   \n",
-       "4  b7c5bb7e614fcce37f1f8c7ba00786faa5482270039b5c...   \n",
-       "\n",
-       "                                            location   jobs  \\\n",
-       "0                                          Anchorage   40.0   \n",
-       "1                                        Prudhoe Bay  134.0   \n",
-       "2                              Fairbanks, North Pole  185.0   \n",
-       "3                                          Anchorage   59.0   \n",
-       "4  Anchorage and 20 smaller Alaska communities, p...    NaN   \n",
-       "\n",
-       "                                             company postal_code        date  \n",
-       "0                                        Bean’s Cafe          AK  2021-09-16  \n",
-       "1                                 Kakivik Asset Mgmt          AK  2021-07-02  \n",
-       "2                                      First Student          AK  2021-04-30  \n",
-       "3                            GCI Communication Group          AK  2021-04-12  \n",
-       "4  RavnAir Group, Corvus Airlines, Hageland Aviat...          AK  2020-09-30  "
+       "  postal_code                                   company        date  jobs\n",
+       "0          IA  International Automotive Components, IAC  2016-10-21   460\n",
+       "1          IA               Premier Brick & Stone, Inc.  2016-10-31    25\n",
+       "2          IA                                    ShopKo  2016-11-01    24\n",
+       "3          IA                         Eaton Corporation  2016-11-18   144\n",
+       "4          IA                    Transamerica Life Ins.  2016-12-02    44"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "2c7979b6-9fb7-48c8-aa55-c3b7bb585073",
    "metadata": {},
    "outputs": [],
@@ -189,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "4e774c0b-ccea-463c-a30d-dc0f1d4b495a",
    "metadata": {},
    "outputs": [
@@ -198,18 +170,16 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 1233 entries, 367 to 30680\n",
-      "Data columns (total 6 columns):\n",
-      " #   Column       Non-Null Count  Dtype  \n",
-      "---  ------       --------------  -----  \n",
-      " 0   hash_id      1233 non-null   object \n",
-      " 1   location     1233 non-null   object \n",
-      " 2   jobs         45 non-null     float64\n",
-      " 3   company      1233 non-null   object \n",
-      " 4   postal_code  1233 non-null   object \n",
-      " 5   date         1223 non-null   object \n",
-      "dtypes: float64(1), object(5)\n",
-      "memory usage: 67.4+ KB\n"
+      "Int64Index: 6 entries, 74 to 155\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column       Non-Null Count  Dtype \n",
+      "---  ------       --------------  ----- \n",
+      " 0   postal_code  6 non-null      object\n",
+      " 1   company      6 non-null      object\n",
+      " 2   date         6 non-null      object\n",
+      " 3   jobs         6 non-null      int64 \n",
+      "dtypes: int64(1), object(3)\n",
+      "memory usage: 240.0+ bytes\n"
      ]
     }
    ],
@@ -219,108 +189,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "a99a0712-6e2d-4e17-97af-b59e20c547bf",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>hash_id</th>\n",
-       "      <th>location</th>\n",
-       "      <th>jobs</th>\n",
-       "      <th>company</th>\n",
-       "      <th>postal_code</th>\n",
-       "      <th>date</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>30562</th>\n",
-       "      <td>00c2adac1c428d0e6b2bd7ba525283d9dbeba37b901bfe...</td>\n",
-       "      <td>Farmers Branch</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Letter Ride-N. Stemmons</td>\n",
-       "      <td>TX</td>\n",
-       "      <td>2019-10-04</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30118</th>\n",
-       "      <td>00c2adac1c428d0e6b2bd7ba525283d9dbeba37b901bfe...</td>\n",
-       "      <td>Farmers Branch</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Letter Ride-N. Stemmons</td>\n",
-       "      <td>TX</td>\n",
-       "      <td>2019-10-04</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29526</th>\n",
-       "      <td>00c2adac1c428d0e6b2bd7ba525283d9dbeba37b901bfe...</td>\n",
-       "      <td>Farmers Branch</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Letter Ride-N. Stemmons</td>\n",
-       "      <td>TX</td>\n",
-       "      <td>2019-10-04</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30414</th>\n",
-       "      <td>00c2adac1c428d0e6b2bd7ba525283d9dbeba37b901bfe...</td>\n",
-       "      <td>Farmers Branch</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Letter Ride-N. Stemmons</td>\n",
-       "      <td>TX</td>\n",
-       "      <td>2019-10-04</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30266</th>\n",
-       "      <td>00c2adac1c428d0e6b2bd7ba525283d9dbeba37b901bfe...</td>\n",
-       "      <td>Farmers Branch</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Letter Ride-N. Stemmons</td>\n",
-       "      <td>TX</td>\n",
-       "      <td>2019-10-04</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                 hash_id        location  \\\n",
-       "30562  00c2adac1c428d0e6b2bd7ba525283d9dbeba37b901bfe...  Farmers Branch   \n",
-       "30118  00c2adac1c428d0e6b2bd7ba525283d9dbeba37b901bfe...  Farmers Branch   \n",
-       "29526  00c2adac1c428d0e6b2bd7ba525283d9dbeba37b901bfe...  Farmers Branch   \n",
-       "30414  00c2adac1c428d0e6b2bd7ba525283d9dbeba37b901bfe...  Farmers Branch   \n",
-       "30266  00c2adac1c428d0e6b2bd7ba525283d9dbeba37b901bfe...  Farmers Branch   \n",
-       "\n",
-       "       jobs                  company postal_code        date  \n",
-       "30562   NaN  Letter Ride-N. Stemmons          TX  2019-10-04  \n",
-       "30118   NaN  Letter Ride-N. Stemmons          TX  2019-10-04  \n",
-       "29526   NaN  Letter Ride-N. Stemmons          TX  2019-10-04  \n",
-       "30414   NaN  Letter Ride-N. Stemmons          TX  2019-10-04  \n",
-       "30266   NaN  Letter Ride-N. Stemmons          TX  2019-10-04  "
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "KeyError",
+     "evalue": "'hash_id'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_623907/1101993427.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdupes_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msort_values\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"hash_id\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/.local/share/virtualenvs/warn-transformer-I6Yccls_/lib/python3.7/site-packages/pandas/util/_decorators.py\u001b[0m in \u001b[0;36mwrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    309\u001b[0m                     \u001b[0mstacklevel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mstacklevel\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    310\u001b[0m                 )\n\u001b[0;32m--> 311\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    312\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    313\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mwrapper\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.local/share/virtualenvs/warn-transformer-I6Yccls_/lib/python3.7/site-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36msort_values\u001b[0;34m(self, by, axis, ascending, inplace, kind, na_position, ignore_index, key)\u001b[0m\n\u001b[1;32m   6257\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   6258\u001b[0m             \u001b[0mby\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mby\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 6259\u001b[0;31m             \u001b[0mk\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_get_label_or_level_values\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mby\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   6260\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   6261\u001b[0m             \u001b[0;31m# need to rewrap column in Series to apply key function\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.local/share/virtualenvs/warn-transformer-I6Yccls_/lib/python3.7/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36m_get_label_or_level_values\u001b[0;34m(self, key, axis)\u001b[0m\n\u001b[1;32m   1777\u001b[0m             \u001b[0mvalues\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maxes\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_level_values\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_values\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1778\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1779\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1780\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1781\u001b[0m         \u001b[0;31m# Check for duplicates\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'hash_id'"
+     ]
     }
    ],
    "source": [
@@ -329,97 +214,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "fd57810b-3bc7-4c77-8ba2-ae4469b14ddb",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>postal_code</th>\n",
-       "      <th>total</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>AL</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>CA</td>\n",
-       "      <td>31</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>CO</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>GA</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>IA</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>IN</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>MD</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>TX</td>\n",
-       "      <td>1187</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  postal_code  total\n",
-       "0          AL      1\n",
-       "1          CA     31\n",
-       "2          CO     10\n",
-       "3          GA      1\n",
-       "4          IA      1\n",
-       "5          IN      1\n",
-       "6          MD      1\n",
-       "7          TX   1187"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "dupes_df.groupby(\"postal_code\").size().rename(\"total\").reset_index()"
    ]
@@ -441,7 +239,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.7.12"
   }
  },
  "nbformat": 4,
