--- a/_notebooks/duplicates.ipynb
+++ b/_notebooks/duplicates.ipynb
@@ -467,6 +467,454 @@
    "source": [
     "dupes_df.groupby(\"postal_code\").size().rename(\"total\").reset_index()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "939d69e5-982d-4bf9-994e-9167f2e6ddf4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>jobs</th>\n",
+       "      <th>date</th>\n",
+       "      <th>postal_code</th>\n",
+       "      <th>location</th>\n",
+       "      <th>hash_id</th>\n",
+       "      <th>company</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>367</th>\n",
+       "      <td>55.0</td>\n",
+       "      <td>2009-03-16</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>Mobile</td>\n",
+       "      <td>6ba1dec3f427574208540669deabfd72f8e1b010b09415...</td>\n",
+       "      <td>FOOD WORLD</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     jobs        date postal_code location  \\\n",
+       "367  55.0  2009-03-16          AL   Mobile   \n",
+       "\n",
+       "                                               hash_id     company  \n",
+       "367  6ba1dec3f427574208540669deabfd72f8e1b010b09415...  FOOD WORLD  "
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dupes_df[dupes_df.postal_code == \"AL\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "deef79b0-d5ce-4c97-a106-27c917d53499",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>jobs</th>\n",
+       "      <th>date</th>\n",
+       "      <th>postal_code</th>\n",
+       "      <th>location</th>\n",
+       "      <th>hash_id</th>\n",
+       "      <th>company</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>366</th>\n",
+       "      <td>55.0</td>\n",
+       "      <td>2009-03-16</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>Mobile</td>\n",
+       "      <td>6ba1dec3f427574208540669deabfd72f8e1b010b09415...</td>\n",
+       "      <td>FOOD WORLD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>367</th>\n",
+       "      <td>55.0</td>\n",
+       "      <td>2009-03-16</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>Mobile</td>\n",
+       "      <td>6ba1dec3f427574208540669deabfd72f8e1b010b09415...</td>\n",
+       "      <td>FOOD WORLD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>368</th>\n",
+       "      <td>47.0</td>\n",
+       "      <td>2009-03-16</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>Mobile</td>\n",
+       "      <td>37f32b25496761417e3726d0837a1f5f2e45f95743e2f8...</td>\n",
+       "      <td>FOOD WORLD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>369</th>\n",
+       "      <td>52.0</td>\n",
+       "      <td>2009-03-16</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>Mobile</td>\n",
+       "      <td>022c4e55e01708e3a7e2aa409dbfb23e26fbad576f2f21...</td>\n",
+       "      <td>FOOD WORLD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>370</th>\n",
+       "      <td>48.0</td>\n",
+       "      <td>2009-03-16</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>Mobile</td>\n",
+       "      <td>6ebd71fd1cefb2a5e6b78b93f8d805f73ebbcedd0f151a...</td>\n",
+       "      <td>FOOD WORLD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>371</th>\n",
+       "      <td>30.0</td>\n",
+       "      <td>2009-03-16</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>Theodore</td>\n",
+       "      <td>8fdd85f0f71a115756c8c53405e1b1d16a31403ca0f3c0...</td>\n",
+       "      <td>FOOD WORLD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>372</th>\n",
+       "      <td>30.0</td>\n",
+       "      <td>2009-03-16</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>Saraland</td>\n",
+       "      <td>ca756dbb16123b2af998d28a57096e40655212e25c618f...</td>\n",
+       "      <td>FOOD WORLD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>382</th>\n",
+       "      <td>74.0</td>\n",
+       "      <td>2009-03-16</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>McCalla</td>\n",
+       "      <td>cddd82742109fc9737be38e363488f44d4a7b710ee83d3...</td>\n",
+       "      <td>FOOD WORLD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>383</th>\n",
+       "      <td>42.0</td>\n",
+       "      <td>2009-03-16</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>Trussville</td>\n",
+       "      <td>043d07383931257c63f7a6bf144621b6834913c4d24fd0...</td>\n",
+       "      <td>FOOD WORLD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>384</th>\n",
+       "      <td>42.0</td>\n",
+       "      <td>2009-03-16</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>Birmingham</td>\n",
+       "      <td>d0df97c489f035c3cc211245d0a532b4f105ece9276490...</td>\n",
+       "      <td>FOOD WORLD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>385</th>\n",
+       "      <td>60.0</td>\n",
+       "      <td>2009-03-16</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>Hueytown</td>\n",
+       "      <td>2141f5f9058162daa0f66422ff515383b40390da778934...</td>\n",
+       "      <td>FOOD WORLD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>386</th>\n",
+       "      <td>40.0</td>\n",
+       "      <td>2009-03-16</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>Birmingham</td>\n",
+       "      <td>aa611087449d3c6136370c1b72b1c8d9f50b0844edee03...</td>\n",
+       "      <td>FOOD WORLD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>393</th>\n",
+       "      <td>48.0</td>\n",
+       "      <td>2009-03-16</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>Gardendale</td>\n",
+       "      <td>c16eddb865089136a11c7708e90cde1f15403083d5848e...</td>\n",
+       "      <td>FOOD WORLD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>442</th>\n",
+       "      <td>47.0</td>\n",
+       "      <td>2009-03-16</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>Dora</td>\n",
+       "      <td>c40bfb6aa7555915468678f195da58b72c76c9620334f0...</td>\n",
+       "      <td>FOOD WORLD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>455</th>\n",
+       "      <td>62.0</td>\n",
+       "      <td>2009-03-16</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>Moody</td>\n",
+       "      <td>124df3ccd67c98790fc70c0c616c278018e07dcf154d8a...</td>\n",
+       "      <td>FOOD WORLD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>456</th>\n",
+       "      <td>72.0</td>\n",
+       "      <td>2009-03-16</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>Tuscaloosa</td>\n",
+       "      <td>a5df4a935119c5ff2178133f6978bd1b52674daed335bf...</td>\n",
+       "      <td>FOOD WORLD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>457</th>\n",
+       "      <td>51.0</td>\n",
+       "      <td>2009-03-16</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>Prattville</td>\n",
+       "      <td>541f29391d3935a0c2e45efaf890ad7385fab7969c1034...</td>\n",
+       "      <td>FOOD WORLD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>458</th>\n",
+       "      <td>55.0</td>\n",
+       "      <td>2009-03-16</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>Tuscaloosa</td>\n",
+       "      <td>b54f062b285c735ff5b0bf0ab9d46456c43a34f3a0ddc9...</td>\n",
+       "      <td>FOOD WORLD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>459</th>\n",
+       "      <td>67.0</td>\n",
+       "      <td>2009-03-16</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>Jasper</td>\n",
+       "      <td>c384c7c37c5cd7700ed4f8b03dfe779e715bf66163f048...</td>\n",
+       "      <td>FOOD WORLD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>460</th>\n",
+       "      <td>64.0</td>\n",
+       "      <td>2009-03-16</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>Monroeville</td>\n",
+       "      <td>d1dbd09693f47fb8120bc170cc194864559b28257ddf64...</td>\n",
+       "      <td>FOOD WORLD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>461</th>\n",
+       "      <td>62.0</td>\n",
+       "      <td>2009-03-16</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>Demopolis</td>\n",
+       "      <td>5394b68acc8413b6dc92dd4da6036040b0fbdb9392d7c4...</td>\n",
+       "      <td>FOOD WORLD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>462</th>\n",
+       "      <td>40.0</td>\n",
+       "      <td>2009-03-16</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>Gadsden</td>\n",
+       "      <td>268f2f623cde0fa77fa97b788a6c26aded5f5b1bd11efb...</td>\n",
+       "      <td>FOOD WORLD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>463</th>\n",
+       "      <td>64.0</td>\n",
+       "      <td>2009-03-16</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>Sylacauga</td>\n",
+       "      <td>890811493c75d4c4ce32efe47ffccc129b0c8b264c721a...</td>\n",
+       "      <td>FOOD WORLD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>464</th>\n",
+       "      <td>56.0</td>\n",
+       "      <td>2009-03-16</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>Pell City</td>\n",
+       "      <td>22fe0923b6862b0af6c5ee82626e206614041550255a96...</td>\n",
+       "      <td>FOOD WORLD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>465</th>\n",
+       "      <td>45.0</td>\n",
+       "      <td>2009-03-16</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>Pelham</td>\n",
+       "      <td>4934963a7375adab8caa83869bac67b7b0e7b3c74e6b79...</td>\n",
+       "      <td>FOOD WORLD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>466</th>\n",
+       "      <td>48.0</td>\n",
+       "      <td>2009-03-16</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>Rainbow City</td>\n",
+       "      <td>bc6b4f5a66dfa15ce676c7754b3bcd7db9886c508c9219...</td>\n",
+       "      <td>FOOD WORLD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>467</th>\n",
+       "      <td>35.0</td>\n",
+       "      <td>2009-03-16</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>Gadsden</td>\n",
+       "      <td>fa479885b4e594534e877213bf2c453d04e32900a32dd3...</td>\n",
+       "      <td>FOOD WORLD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>468</th>\n",
+       "      <td>64.0</td>\n",
+       "      <td>2009-03-16</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>Tuscaloosa</td>\n",
+       "      <td>99591f5bd61acdd1521a7ebaef8a0cf254c3b0ea943c6f...</td>\n",
+       "      <td>FOOD WORLD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>469</th>\n",
+       "      <td>49.0</td>\n",
+       "      <td>2009-03-16</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>Cullman</td>\n",
+       "      <td>d35d4c9b4fe0d83204009e02a2bb3879fc522ba8fd3d2b...</td>\n",
+       "      <td>FOOD WORLD</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     jobs        date postal_code      location  \\\n",
+       "366  55.0  2009-03-16          AL        Mobile   \n",
+       "367  55.0  2009-03-16          AL        Mobile   \n",
+       "368  47.0  2009-03-16          AL        Mobile   \n",
+       "369  52.0  2009-03-16          AL        Mobile   \n",
+       "370  48.0  2009-03-16          AL        Mobile   \n",
+       "371  30.0  2009-03-16          AL      Theodore   \n",
+       "372  30.0  2009-03-16          AL      Saraland   \n",
+       "382  74.0  2009-03-16          AL       McCalla   \n",
+       "383  42.0  2009-03-16          AL    Trussville   \n",
+       "384  42.0  2009-03-16          AL    Birmingham   \n",
+       "385  60.0  2009-03-16          AL      Hueytown   \n",
+       "386  40.0  2009-03-16          AL    Birmingham   \n",
+       "393  48.0  2009-03-16          AL    Gardendale   \n",
+       "442  47.0  2009-03-16          AL          Dora   \n",
+       "455  62.0  2009-03-16          AL         Moody   \n",
+       "456  72.0  2009-03-16          AL    Tuscaloosa   \n",
+       "457  51.0  2009-03-16          AL    Prattville   \n",
+       "458  55.0  2009-03-16          AL    Tuscaloosa   \n",
+       "459  67.0  2009-03-16          AL        Jasper   \n",
+       "460  64.0  2009-03-16          AL   Monroeville   \n",
+       "461  62.0  2009-03-16          AL     Demopolis   \n",
+       "462  40.0  2009-03-16          AL       Gadsden   \n",
+       "463  64.0  2009-03-16          AL     Sylacauga   \n",
+       "464  56.0  2009-03-16          AL     Pell City   \n",
+       "465  45.0  2009-03-16          AL        Pelham   \n",
+       "466  48.0  2009-03-16          AL  Rainbow City   \n",
+       "467  35.0  2009-03-16          AL       Gadsden   \n",
+       "468  64.0  2009-03-16          AL    Tuscaloosa   \n",
+       "469  49.0  2009-03-16          AL       Cullman   \n",
+       "\n",
+       "                                               hash_id     company  \n",
+       "366  6ba1dec3f427574208540669deabfd72f8e1b010b09415...  FOOD WORLD  \n",
+       "367  6ba1dec3f427574208540669deabfd72f8e1b010b09415...  FOOD WORLD  \n",
+       "368  37f32b25496761417e3726d0837a1f5f2e45f95743e2f8...  FOOD WORLD  \n",
+       "369  022c4e55e01708e3a7e2aa409dbfb23e26fbad576f2f21...  FOOD WORLD  \n",
+       "370  6ebd71fd1cefb2a5e6b78b93f8d805f73ebbcedd0f151a...  FOOD WORLD  \n",
+       "371  8fdd85f0f71a115756c8c53405e1b1d16a31403ca0f3c0...  FOOD WORLD  \n",
+       "372  ca756dbb16123b2af998d28a57096e40655212e25c618f...  FOOD WORLD  \n",
+       "382  cddd82742109fc9737be38e363488f44d4a7b710ee83d3...  FOOD WORLD  \n",
+       "383  043d07383931257c63f7a6bf144621b6834913c4d24fd0...  FOOD WORLD  \n",
+       "384  d0df97c489f035c3cc211245d0a532b4f105ece9276490...  FOOD WORLD  \n",
+       "385  2141f5f9058162daa0f66422ff515383b40390da778934...  FOOD WORLD  \n",
+       "386  aa611087449d3c6136370c1b72b1c8d9f50b0844edee03...  FOOD WORLD  \n",
+       "393  c16eddb865089136a11c7708e90cde1f15403083d5848e...  FOOD WORLD  \n",
+       "442  c40bfb6aa7555915468678f195da58b72c76c9620334f0...  FOOD WORLD  \n",
+       "455  124df3ccd67c98790fc70c0c616c278018e07dcf154d8a...  FOOD WORLD  \n",
+       "456  a5df4a935119c5ff2178133f6978bd1b52674daed335bf...  FOOD WORLD  \n",
+       "457  541f29391d3935a0c2e45efaf890ad7385fab7969c1034...  FOOD WORLD  \n",
+       "458  b54f062b285c735ff5b0bf0ab9d46456c43a34f3a0ddc9...  FOOD WORLD  \n",
+       "459  c384c7c37c5cd7700ed4f8b03dfe779e715bf66163f048...  FOOD WORLD  \n",
+       "460  d1dbd09693f47fb8120bc170cc194864559b28257ddf64...  FOOD WORLD  \n",
+       "461  5394b68acc8413b6dc92dd4da6036040b0fbdb9392d7c4...  FOOD WORLD  \n",
+       "462  268f2f623cde0fa77fa97b788a6c26aded5f5b1bd11efb...  FOOD WORLD  \n",
+       "463  890811493c75d4c4ce32efe47ffccc129b0c8b264c721a...  FOOD WORLD  \n",
+       "464  22fe0923b6862b0af6c5ee82626e206614041550255a96...  FOOD WORLD  \n",
+       "465  4934963a7375adab8caa83869bac67b7b0e7b3c74e6b79...  FOOD WORLD  \n",
+       "466  bc6b4f5a66dfa15ce676c7754b3bcd7db9886c508c9219...  FOOD WORLD  \n",
+       "467  fa479885b4e594534e877213bf2c453d04e32900a32dd3...  FOOD WORLD  \n",
+       "468  99591f5bd61acdd1521a7ebaef8a0cf254c3b0ea943c6f...  FOOD WORLD  \n",
+       "469  d35d4c9b4fe0d83204009e02a2bb3879fc522ba8fd3d2b...  FOOD WORLD  "
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df.company == \"FOOD WORLD\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f283fb9a-7ca5-44ac-b342-470e54749c73",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
